Preventing table from overflowing

--- a/static/less/results.less
+++ b/static/less/results.less
@@ -85,6 +85,7 @@ header.results-label h3 {
   }
   table.items {
     background-color: @searchBodyBackground;
+    table-layout:fixed;
     width: 100%;
 
     th {
